Build out JVM 03-08 chapters and OOP sub-chapters with senior-ops perspective
JVM additions:
- 03-execution-engine: 8 sub-chapters (overview, template interpreter,
  tiered compilation, C1/C2, inlining+IC, escape analysis, loop+vector,
  speculative+deopt) + 8 SVGs
- 04-gc: 6 sub-chapters (fundamentals, generational, CMS+G1, ZGC+Shenandoah,
  Generational ZGC, tuning) + 5 SVGs
- 05-threading: 4 sub-chapters (JMM+happens-before, memory barriers,
  synchronized+Mark Word, virtual threads) + 4 SVGs
- 06-version-history: LTS master timeline + SVG
- 07-hotspot-internals: src layout tour + SVG
- 08-graalvm: Graal JIT + Native Image + Truffle + SVG
- 09-mock-interviews: Junior/Senior/Principal questions
- 10-ops-scenarios: 8-scenario matrix + SVG
- 11-hands-on-workbook: JMH/JFR/async-profiler/MAT/jcmd map + SVG
- 12-tradeoff-master-table: cross-chapter decision matrix
- 02-runtime-data-areas: 5 new sub-chapters (Metaspace, Stack/PC/Native,
  Code Cache, Direct Memory, GC bookkeeping) + 6 SVGs for all sub-chapters

JVM rewrites:
- 01-classfile-format.md: rewritten from byte-level reference to senior
  ops perspective with 7 production scenarios
- 01-class-lifecycle: added "where am I in JVM" context section to all
  4 chapters with mid-chapter reminders

OOP additions:
- 17 chapters (00-12, 20-22, 30) each got core sub-chapter applying
  the same 5-rule senior-ops methodology

Standard rules infrastructure:
- AGENTS.md: 5 rules under 200 chars (single source)
- CLAUDE.md: @AGENTS.md import for Claude Code auto-load

All sub-chapters follow 5 rules: no concept omission, senior ops master
perspective, no surface-detail memorization, Excalidraw diagrams,
master-level whiteboard explanation goal.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>